# Airline-Reservation-and-Management-System

./: .gitignore  CMakeLists.txt  README.md
docs/: Input and expected output.md
functional_testing/: dateTest.cpp  fileManagerTest001.cpp  fileTest001.txt  jsonManagerTest001  jsonManagerTest001.cpp  jsonTest001.json
header/: APP.hpp
header/creation/factory/user/: UserFactory.hpp
header/factory/: ConcreteUserFactory.hpp  UserFactory.hpp
header/flight/: Aircraft.hpp  Flight.cpp  Flight.hpp  Reservation.hpp
header/manager/: AircraftManager.hpp  BookingManager.hpp  FlightManager.hpp  IManager.hpp  ReportManager.hpp  UserManager.hpp
header/nlohmann/: adl_serializer_admin.hpp  adl_serializer_aircraft.hpp  adl_serializer_bookingAgent.hpp  adl_serializer_crewAttendant.hpp  adl_serializer_flight.hpp  adl_serializer_passenger.hpp  adl_serializer_reservation.hpp
header/payment/: Cash.hpp  CreditCard.hpp  IPayment.hpp  Paypal.hpp
header/person/: Administrator.hpp  BookingAgent.hpp  CrewAttendant.hpp  FlightAttendant.hpp  Passenger.hpp  Person.hpp  Pilot.hpp  User.hpp
header/person/crew/: FlightAttendant.hpp
header/person/user/: User.hpp
header/utils/: Configs.hpp  Constants.hpp  FileManager.hpp  HiddenInput.hpp  IOStreamHelper.hpp  JSONFileManager.hpp  date.hpp
header/utils/exceptions/: Undefined_role_exception.hpp  non_existing_user_exception.hpp  wrong_password_exception.hpp
include/creation/factory/user/: concreteUserFactory.hpp  userFactory.hpp
include/person/: Person.hpp
include/person/crew/: CrewAttendant.hpp
include/person/user/: Administrator.hpp  BookingAgent.hpp  Passenger.hpp
runnable/storage/: admin001.json  aircrafts001.json  bookingAgent001.json  flightAttendant.json  flights001.json  passenger001.json  pilot.json  reservations001.json
src/: APP.cpp  main  main.cpp
src/factory/: ConcreteUserFactory.cpp
src/flight/: Aircraft.cpp  Flight.cpp  Reservation.cpp
src/manager/: AircraftManager.cpp  BookingManager.cpp  FlightManager.cpp  ReportManager.cpp  UserManager.cpp
src/payment/: Cash.cpp  CreditCard.cpp  Paypal.cpp
src/person/: Administrator.cpp  BookingAgent.cpp  CrewAttendant.cpp  FlightAttendant.cpp  Passenger.cpp  Person.cpp  Pilot.cpp  User.cpp
src/utils/: FileManager.cpp  HiddenInput.cpp  IOStreamHelper.cpp  JSONFileManager.cpp  date.cpp
src/utils/exceptions/: Undefined_role_exception.cpp  non_existing_user_exception.cpp  wrong_password_exception.cpp
storage/: admin001.json  crew.json  flights001.json  test1.json
